--- a/portfolio_optimization.ipynb
+++ b/portfolio_optimization.ipynb
@@ -173,8 +173,11 @@
         "equal_weights = np.ones(len(assets)) /len(assets)\n",
         "eq_returns, eq_volatility = portfolio_performance(equal_weights, mean_returns, cov_matrix)\n",
         "\n",
+        "\n",
+        "\n",
         "print(\"Optimal Portfolio Return:\", round(portfolio_return, 3))\n",
-        "print(\"Optimal Portfolio Volatility:\", round(portfolio_volatility, 3))\n"
+        "print(\"Optimal Portfolio Volatility:\", round(portfolio_volatility, 3))\n",
+        "\n",
         "print(\"Equal Weight Return:\", round(eq_returns, 3))\n",
         "print(\"Equal Weight Volatility:\", round(eq_volatility, 3))"
       ],
